# Remote-Control-Using-Text-File

./: README.md
.NET/.NET Framework/Control Status/: Form1.cs  MasterClass.cs  README.md
.NET/.NET Framework/Update Handler/: Form1.cs  README.md  UpdateHandler.cs
.NET/.NET Latest/Control Status/: Form1.cs  MasterClass.cs  README.md
.NET/.NET Latest/Update Handler/: Form1.cs  README.md  UpdateHandler.cs
C++/Update Handler/: CMakeLists.txt  Constants.h  MainForm.cpp  MainForm.h  README.md  UpdateHandler.cpp  UpdateHandler.h  Version.cpp  Version.h  main.cpp
Control + Update Handler (MERGED)/: README.md
Control + Update Handler (MERGED)/.NET Framework/: Form1.cs  MasterClass.cs  UpdateHandler.cs
Control + Update Handler (MERGED)/.NET Latest/: Form1.cs  MasterClass.cs  UpdateHandler.cs
Control Status/.NET Framework/: README.md
Python Integration/: README.md
Python/Integration/: README.md  config.yaml  requirements.txt
Python/Integration/src/: control_status.py  main.py  update_handler.py
Python/Integration/src/gui/: main_window.py  styles.py
Python/Integration/src/utils/: config.py  logger.py  version.py
Update Handler/.NET Framework/: README.md
Update Handler/C++/: README.md
